[tool.poetry]
name = "ansible"
version = "0.1.0"
description = "auto extract ansible docs for Typed Ansible Plugin"
authors = ["valbendan <valbendan@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

typer = ">=0.4,<1"

pydantic = ">=1.9,<2.0"

[tool.poetry.dev-dependencies]
black = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
